refactor: rename CustomerIOWeb to CustomerIOWebPlugin and update pubspec.yaml

--- a/web/customer_io_web/pubspec.yaml
+++ b/web/customer_io_web/pubspec.yaml
@@ -20,6 +20,6 @@ flutter:
     implements: customer_io
     platforms:
       web:
-        pluginClass: CustomerIOWeb
+        pluginClass: CustomerIOWebPlugin
         fileName: customer_io_web.dart
 
