--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,6 @@ dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
-  customer_io_web:
-    path: web/customer_io_web
 
 dev_dependencies:
   flutter_test:
@@ -45,4 +43,7 @@ flutter:
         pluginClass: CustomerIOPlugin
       ios:
         pluginClass: CustomerIOPlugin
-        native_sdk_version: 3.11.0
+        native_sdk_version: 3.14.0
+      web:
+        pluginClass: CustomerIOWebPlugin
+        default_package: customer_io_web
