--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
+  flutter_web_plugins:
+    sdk: flutter
+  js: ^0.6.5
 
 dev_dependencies:
   flutter_test:
@@ -45,3 +48,6 @@ flutter:
         pluginClass: CustomerIOPlugin
         native_sdk_version: 4.0.0
         firebase_wrapper_version: 1.0.0
+      web:
+        pluginClass: CustomerIOWebPlugin
+        fileName: customer_io_web.dart
